# kmu_virtualdrive2024

./: .gitignore  2024-02-04-08-01-17.bag  README.md  import pickle.py  map.pgm
src/descripter_test/: CMakeLists.txt  package.xml
src/descripter_test/scripts/: descriptor.py  main.py
src/driving_mode/: CMakeLists.txt  package.xml
src/lane_detection/: CMakeLists.txt  package.xml
src/lane_detection/msg/: LaneInformation.msg
src/lane_detection/scripts/: cam_sub.py  lane_detect.py  lane_detection.py  main.py  sliding.py
src/lidar/: CMakeLists.txt  index.py  package.xml
src/lidar/lidar/: CMakeLists.txt  package.xml
src/lidar/lidar/src/: index.py
src/lidar/msg/: Obstacle.msg
src/lidar/src/: index  index.py  indexing.py  main.py  obstacle.py  rotary.py
src/lidar/src/lidar/src/: index.py
src/nav_2d/: CMakeLists.txt  package.xml
src/nav_2d/launch/: amcl.launch  move_base.launch
src/nav_2d/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/nav_2d/scripts/: cmd_vel_to_ackermann.py
src/obstacle_detect/: CMakeLists.txt  package.xml
src/obstacle_detect/launch/: a = [].py  obstacle.launch
src/obstacle_detect/msg/: DynamicObstacleArray.msg  DynamicObstacleInfo.msg  DynamicObstacleInfoArray.msg  LidarObstacleInfo.msg  LidarObstacleInfoArray.msg  ObstacleArray.msg  ObstacleInfo.msg  Rotary.msg  RotaryArray.msg
src/obstacle_detect/src/: camera_obstacle_detect.py  lidar_obstacle_detect.py  record.py
src/pure_pursuit/: CMakeLists.txt  package.xml
src/pure_pursuit/scripts/: main.py
src/pure_pursuit/scripts/slam_nav/: CMakeLists.txt
src/pure_pursuit/scripts/slam_nav/launch/: teleop.launch
src/pure_pursuit/scripts/slam_nav/maps/: map.pgm
src/pure_pursuit/scripts/slam_nav/rviz/: navigation.rviz  slam.rviz
src/pure_pursuit/scripts/slam_nav/src/: convert_lidar.cpp
src/sensor/: CMakeLists.txt  package.xml
src/sensor/launch/: teleop.launch
src/slam_nav/: CMakeLists.txt  package.xml
src/slam_nav/launch/: create_waypoint.launch  gmapping.launch  lane_drive.launch  navigation.launch  pure_pursuit.launch  pure_test.launch  pure_test_copy.launch  teleop.launch  total.launch
src/slam_nav/maps/: map.pgm
src/slam_nav/maps/test_map/: map.pgm
src/slam_nav/maps/test_map2/: map.pgm
src/slam_nav/maps/tmp2_slam_map/: map.pgm
src/slam_nav/maps/tmp_slam_map/: map.pgm
src/slam_nav/rviz/: display.rviz  navigation.rviz  slam.rviz
src/slam_nav/scripts/: LKAS.py  Untitled-1.py  graph.py  lane_drive.py  mission23.pkl  mission45.pkl  modify_waypoint.py  navigation_client copy.py  navigation_client.py  navigation_client_copy.py  pid.py  pub_odom.py  pure_pursuit.py  pure_pursuit_test.py  rotary_test.py  save_waypoint.py  test.py  test2.py  total.py  waypoint.pkl
src/slam_nav/scripts/aaaa/: mission23.pkl
src/slam_nav/scripts/hoxy/: mission23.pkl  mission45.pkl
src/slam_nav/scripts/hoxy2/: mission23.pkl  mission45.pkl
src/slam_nav/scripts/hoxy3/: mission23.pkl
src/slam_nav/scripts/hoxy4/: mission23.pkl  mission45.pkl
src/slam_nav/scripts/ttt/: waypoint.pkl
src/slam_nav/scripts/waypoint/: import pickle.py
src/slam_nav/scripts/waypoint2/: mission45.pkl
src/slam_nav/scripts/waypoint4/: mission23.pkl
src/traffic_sign/: CMakeLists.txt  package.xml
src/traffic_sign/scripts/: make_circular_path.py  traffic_sub.py
